--- a/src/workshops/icons/glyph-import/glyph-import.html
+++ b/src/workshops/icons/glyph-import/glyph-import.html
@@ -10,7 +10,7 @@
         </div>
     </div>
 
-    <div role="listbox" class="flex-item flex-item-grow" data-bind="scrollable: true, listbox: {}">
+    <div role="listbox" class="flex-item flex-item-grow" data-bind="listbox: {}">
         <!-- ko foreach: { data: categories, as: 'category' } -->
         <div class="flex-item">
             <!-- ko if: $component.showFontNames -->
