--- a/src/workshops/snippets/styleVariationSelector.html
+++ b/src/workshops/snippets/styleVariationSelector.html
@@ -3,7 +3,7 @@
         <!--ko if: $component.working()-->
         <spinner></spinner>
         <!--/ko-->
-        <ul class="flex-item flex-item-grow list" data-bind="foreach: { data: snippets, as: 'snippet' }, scrollable: true">
+        <ul class="flex-item flex-item-grow list" data-bind="foreach: { data: snippets, as: 'snippet' }">
             <li class="list-item" data-bind="css: { selected: snippet.hasFocus }, click: $component.selectSnippet, event: { keydown: $component.keydown }, attr: { title: snippet.displayName }">
                 <style-snippet data-bind="itemTemplate: $parent.itemTemplate" params="{ snippetItem: snippet }"></style-snippet>
             </li>
