--- a/src/workshops/styleEditor/styleEditor.html
+++ b/src/workshops/styleEditor/styleEditor.html
@@ -1,5 +1,5 @@
-<div class="form flex-item flex-item-grow" data-bind="scrollable: true">
-    <!-- ko if: baseVariations().length > 0 || styleName || elementStates -->
+
+    <!-- ko if: styleName -->
     <div class="form-group form-group-collapsible">
         <label class="form-label">
             <a href="#" class="form-group-toggle" title="Toggle section"
@@ -16,13 +16,32 @@
             </div>
             <!--/ko -->
 
-            <!-- ko if: baseVariations().length > 0 -->
+            <!-- ko if: elementStates -->
             <div class="form-group">
-                <label for="baseVariationKey" class="form-label">
-                    Base style
+                <label for="textTransform">State</label>
+                <select id="textTransform" class="form-control"
+                    data-bind="options: elementStates, value: selectedState, optionsCaption: 'default'"></select>
+            </div>
+            <!--/ko -->
+        </div>
+    </div>
+    <!--/ko -->
+
+    <!-- ko if: baseComponentVariations().length > 0 -->
+    <div class="form-group form-group-collapsible">
+        <label class="form-label">
+            <a href="#" class="form-group-toggle" title="Toggle section"
+                data-bind="collapse: '#miscellaneousCollapse'"></a>
+            <b>Base style</b>
+        </label>
+        <div id="miscellaneousCollapse" class="collapse form-group-collapse">
+            <!-- ko if: baseComponentVariations().length > 0 -->
+            <div class="form-group">
+                <label for="baseComponentVariationKey" class="form-label">
+                    Variation
                 </label>
-                <select id="variationKey" class="form-control"
-                    data-bind="options: baseVariations, value: baseVariationKey, optionsText: 'displayName', optionsValue: 'key'"></select>
+                <select id="baseComponentVariationKey" class="form-control"
+                    data-bind="options: baseComponentVariations, value: baseComponentVariationKey, optionsText: 'displayName', optionsValue: 'key'"></select>
             </div>
             <!-- /ko -->
 
@@ -36,6 +55,7 @@
         </div>
     </div>
     <!--/ko -->
+
 
     <!-- ko ifnot: working -->
 
@@ -153,8 +173,7 @@
         </div>
     </div>
     <!-- /ko -->
-    
+
     <!-- /ko -->
 
     <!-- /ko -->
-</div>
