Fixed several accessibility issues.

--- a/src/workshops/container/container.html
+++ b/src/workshops/container/container.html
@@ -3,7 +3,7 @@
         <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#alignmentCollapse'"
             aria-label="Toggle 'Content alignment' section"></a>
         <b>Content alignment</b>
-        <button class="btn btn-info" type="button"
+        <button class="btn btn-info" role="tooltip"
             data-bind="tooltip: 'Align the content inside the container. Depending on viewport, the alignment can be different, following mobile-first approach. If not specified in current one, container applies configuration from closest smaller viewports.'"></button>
     </label>
 
@@ -54,7 +54,7 @@
         <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#contentFlowCollapse'"
             aria-label="Toggle 'Content flow' section"></a>
         <b>Content flow</b>
-        <button class="btn btn-info" type="button"
+        <button class="btn btn-info" role="tooltip"
             data-bind="tooltip: 'Manage scrolling settings for container'"></button>
     </label>
     <div id="contentFlowCollapse" class="collapse form-group-collapse">
