--- a/src/workshops/animations/animationEditor.html
+++ b/src/workshops/animations/animationEditor.html
@@ -14,7 +14,7 @@
 <!-- ko if: $component.animationKey -->
 <div class="form-group">
     <label for="animationDuration">
-        <button class="btn btn-info" type="button" aria-label="Max container width"
+        <button class="btn btn-info" role="tooltip" aria-label="Max container width"
             data-bind="tooltip: 'Defines how long a single animation cycle runs.'"></button>
         Duration (seconds)
     </label>
@@ -23,7 +23,7 @@
 </div>
 <div class="form-group">
     <label for="animationIterationCount">
-        <button class="btn btn-info" type="button" aria-label="Max container width"
+        <button class="btn btn-info" role="tooltip" aria-label="Max container width"
             data-bind="tooltip: 'Defines how many times the animation repeats. If empty, the animation will repeat indefinitely.'"></button>
         Iteration count
     </label>
@@ -32,7 +32,7 @@
 </div>
 <div class="form-group">
     <label for="controls" class="form-label">
-        <button class="btn btn-info" type="button" aria-label="Max container width"
+        <button class="btn btn-info" role="tooltip" aria-label="Max container width"
             data-bind="tooltip: 'If set, the animation will start only when the element gets scrolled into view.'"></button>
         <input type="checkbox" id="startWhenVisible" data-bind="checked: startWhenVisible" />Start when visible
     </label>
