--- a/src/workshops/background/background.html
+++ b/src/workshops/background/background.html
@@ -84,7 +84,7 @@
 
 <label class="form-label">
     Background sizing
-    <button class="btn btn-info" type="button"
+    <button class="btn btn-info" role="tooltip"
         data-bind="tooltip: '<p><b>Contain:</b> Resize the background image to cover the entire container, even if it has to stretch the image or cut a little bit off one of the edges.</p><p><b>Cover:</b> Resize the background image to make sure the image is fully visible.</p>'"></button>
 </label>
 <div class="form-group">
