--- a/src/workshops/colors/colorEditor.html
+++ b/src/workshops/colors/colorEditor.html
@@ -1,5 +1,5 @@
 <div class="form-group">
-    <button class="btn btn-info" type="button" data-bind="tooltip: 'Name of the color'"></button>
+    <button class="btn btn-info" role="tooltip" data-bind="tooltip: 'Name of the color'"></button>
     <label for="colorName">Color name</label>
     <input id="colorName" type="text" class="form-control" spellcheck="false"
         data-bind="textInput: colorName, focus: true">
