Fixed several accessibility issues.

--- a/src/workshops/background/background.html
+++ b/src/workshops/background/background.html
@@ -57,7 +57,7 @@
         </svg>
         <!-- /ko -->
         <style data-bind="jss: backgroundPreview"></style>
-        <div aria-label="Background source" class="dropzone-showbox" alignment="center center"
+        <div role="presentation" class="dropzone-showbox" alignment="center center"
             data-bind="alignment: { position: direction, onChange: onAlignmentChange }">
             <div class="fit" data-bind="css: backgroundClass"></div>
         </div>
