--- a/src/styleGuide/styleGuide.html
+++ b/src/styleGuide/styleGuide.html
@@ -110,8 +110,9 @@
                 <article>
                     <div class="style-card" data-bind="styleableGlobal: 'globals/a/default'">
                         <div class="style-card-body">
-                            <a href="#" class="no-pointer-events" data-bind="stylePreview: 'globals/a/default'">Regular
-                                link</a>
+                            <a href="#" class="no-pointer-events" data-bind="stylePreview: 'globals/a/default'">
+                                Regular link
+                            </a>
                         </div>
                     </div>
                 </article>
