Fixed accessibility issues with color and gradient selectors.

--- a/src/workshops/colors/colorSelector.html
+++ b/src/workshops/colors/colorSelector.html
@@ -3,20 +3,20 @@
     <hr />
 
     <div role="listbox" aria-label="Colors" class="palette" data-bind="listbox: {}">
-        <div role="presentation" class="color-box"
-            data-bind="css: { selected: !$component.selectedColorKey() }, tooltip: 'Clear color'">
-            <a role="option" class="color" data-bind="click: $component.clearColors, focus: true">
-                <i aria-hidden="true" class="paperbits-icon paperbits-ban"></i>
-            </a>
-        </div>
+        <a role="option" class="color-box"
+            data-bind="css: { selected: !$component.selectedColorKey() }, tooltip: 'Clear color', activate: $component.clearColors, focus: true">
+            <span class="color-box-wrapper">
+                <i aria-hidden="true" class="color paperbits-icon paperbits-ban"></i>
+            </span>
+        </a>
 
         <!-- ko foreach: { data: colors, as: 'color' } -->
-        <div role="presentation" class="color-box"
-            data-bind="css: { selected: color.key === $component.selectedColorKey() }, tooltip: color.displayName">
-            <a role="option" class="color pseudo-transparent-bckg" data-bind="click: $component.selectColor">
-                <span class="fit" data-bind="style: { background: color.value }"></span>
-            </a>
-        </div>
+        <a role="option" class="color-box"
+            data-bind="css: { selected: color.key === $component.selectedColorKey() }, tooltip: color.displayName, activate: $component.selectColor">
+            <span class="color-box-wrapper pseudo-transparent-bckg">
+                <span class="color" data-bind="style: { background: color.value }"></span>
+            </span>
+        </a>
         <!--/ko -->
     </div>
 </div>
