--- a/src/workshops/gradients/gradientSelector.html
+++ b/src/workshops/gradients/gradientSelector.html
@@ -1,18 +1,22 @@
 <div class="editor">
     <h1>Gradient</h1>
-    <hr/>
+    <hr />
 
-    <div class="palette" role="list">
-        <div class="color-box" data-bind="css: { selected: !$component.selectedGradientKey() }, tooltip: 'Clear gradient'">
-            <a href="#" role="listitem" class="color" data-bind="click: $component.clearGradients, focus: true">
-                <i aria-hidden="true" class="paperbits-icon paperbits-ban"></i>
-            </a>
-        </div>
+    <div role="listbox" aria-label="Gradients" class="palette" data-bind="listbox: {}">
+        <a role="option" class="color-box"
+            data-bind="css: { selected: !$component.selectedGradientKey() }, tooltip: 'Clear gradient', activate: $component.clearGradients, focus: true">
+            <span class="color-box-wrapper">
+                <i aria-hidden="true" class="color paperbits-icon paperbits-ban"></i>
+            </span>
+        </a>
 
         <!-- ko foreach: { data: gradients, as: 'gradient' } -->
-        <div class="color-box" data-bind="css: { selected: gradient.key === $component.selectedGradientKey() }, tooltip: gradient.displayName">
-            <a href="#" role="listitem" class="color" data-bind="click: $component.selectGradient, style: { background: gradient.value }"></a>
-        </div>
+        <a role="option" class="color-box"
+            data-bind="css: { selected: gradient.key === $component.selectedGradientKey() }, tooltip: gradient.displayName, activate: $component.selectGradient">
+            <span class="color-box-wrapper pseudo-transparent-bckg">
+                <span class="color" data-bind="style: { background: gradient.value }"></span>
+            </span>
+        </a>
         <!--/ko -->
     </div>
 </div>
