--- a/src/workshops/colors/colorSelector.html
+++ b/src/workshops/colors/colorSelector.html
@@ -4,7 +4,7 @@
 
     <div role="listbox" aria-label="Colors" class="palette" data-bind="listbox: {}">
         <a role="option" class="color-box"
-            data-bind="css: { selected: !$component.selectedColorKey() }, tooltip: 'Clear color', activate: $component.clearColors, focus: true">
+            data-bind="css: { selected: null === $component.selectedColorKey()  }, attr: { 'aria-label': 'Clear color' }, tooltip: 'Clear color', activate: $component.clearColors">
             <span class="color-box-wrapper">
                 <i aria-hidden="true" class="color paperbits-icon paperbits-ban"></i>
             </span>
@@ -12,7 +12,7 @@
 
         <!-- ko foreach: { data: colors, as: 'color' } -->
         <a role="option" class="color-box"
-            data-bind="css: { selected: color.key === $component.selectedColorKey() }, tooltip: color.displayName, activate: $component.selectColor">
+            data-bind="css: { selected: color.key === $component.selectedColorKey() }, attr: { 'aria-label': color.displayName }, tooltip: color.displayName, activate: $component.selectColor">
             <span class="color-box-wrapper pseudo-transparent-bckg">
                 <span class="color" data-bind="style: { background: color.value }"></span>
             </span>
