Added labels to dropdowns.

--- a/src/workshops/typography/typography.html
+++ b/src/workshops/typography/typography.html
@@ -80,7 +80,7 @@
 <div class="form-group">
     <label for="textTransform">Transformation</label>
     <dropdown id="textTransform"
-        params="{ options: textTransformOptions, optionsValue: 'value', optionsText: 'text', value: $component.textTransform }"
+        params="{ options: textTransformOptions, optionsValue: 'value', optionsText: 'text', value: $component.textTransform, optionsCaption: 'Transformation' }"
         aria-label="Transformation">
     </dropdown>
 </div>
