--- a/src/workshops/styleEditor/styleEditor.html
+++ b/src/workshops/styleEditor/styleEditor.html
@@ -17,7 +17,7 @@
         <!-- ko if: elementStates -->
         <div class="form-group">
             <label for="textTransform">State</label>
-            <dropdown id="textTransform" params="{ options: elementStates, value: selectedState, optionsCaption: 'default'}" aria-label="State">
+            <dropdown id="textTransform" params="{ options: elementStates, value: selectedState, optionsCaption: 'State'}" aria-label="State">
             </dropdown>
         </div>
         <!--/ko -->
@@ -47,7 +47,7 @@
         <!-- ko if: elementStates -->
         <div class="form-group">
             <label for="textTransform">State</label>
-            <dropdown id="textTransform" params="{ options: elementStates, value: selectedState, optionsCaption: 'default' }" aria-label="State">
+            <dropdown id="textTransform" params="{ options: elementStates, value: selectedState, optionsCaption: 'State' }" aria-label="State">
             </dropdown>
         </div>
         <!--/ko -->
