--- a/src/workshops/styleEditor/styleEditor.html
+++ b/src/workshops/styleEditor/styleEditor.html
@@ -17,7 +17,7 @@
         <!-- ko if: elementStates -->
         <div class="form-group">
             <label for="textTransform">State</label>
-            <dropdown id="textTransform" params="{ options: elementStates, value: selectedState, optionsCaption: 'State'}" aria-label="State">
+            <dropdown id="textTransform" params="{ options: elementStates, value: selectedState, optionsCaption: 'default', heading: 'State' }" aria-label="State">
             </dropdown>
         </div>
         <!--/ko -->
@@ -47,7 +47,7 @@
         <!-- ko if: elementStates -->
         <div class="form-group">
             <label for="textTransform">State</label>
-            <dropdown id="textTransform" params="{ options: elementStates, value: selectedState, optionsCaption: 'State' }" aria-label="State">
+            <dropdown id="textTransform" params="{ options: elementStates, value: selectedState, optionsCaption: 'defaul', heading: 'State' }" aria-label="State">
             </dropdown>
         </div>
         <!--/ko -->
@@ -84,7 +84,7 @@
         <button class="btn btn-info" role="tooltip" data-bind="tooltip: 'Manage background'"></button>
     </label>
     <div id="backgroundCollapse" class="collapse form-group-collapse">
-        <background params="{ background: elementStyleBackground, onUpdate: onBackgroundUpdate }"></background>
+        <background params="{ background: elementStyleBackground, onUpdate: onBackgroundUpdate, optionsCaption: 'default' }"></background>
     </div>
 </div>
 <!-- /ko -->
